# CardJitsuWater

./: .gitignore  configure.ac
data/: Makefile.am
src/: Makefile.am  water.c
